--- a/index.html
+++ b/index.html
@@ -10,24 +10,10 @@
     <div class="container">
         <div class="slider">
             <div class="item-container">
-                <!-- <div class="item active">
-                    <img src="img/01.webp" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/02.webp" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/03.webp" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/04.webp" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/05.webp" alt="">
-                </div>
-            </div> -->
-            <div class="preview">&uarr;</div>
+            </div>
+            <div class="prev">&uarr;</div>
             <div class="next">&#8595;</div>
+
         </div>
     </div>
     <script src="app.js"></script>
